[package]
name = "uno-stackdumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arduino-hal = { git = "https://github.com/Rahix/avr-hal.git", features = ["arduino-uno"] }
panic-halt = "0.2.0"

[profile.release]
lto = true
panic = "abort"
